agregando mod roles

--- a/src/main/resources/templates/fragments/rol/roles.html
+++ b/src/main/resources/templates/fragments/rol/roles.html
@@ -5,13 +5,7 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<!--          <div class="contenedorizq"> 
-    <label  class="der">
-    <script >
-var f = new Date();
-document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
-</script></label>
-</div>-->
+
     <div class="row">
              <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
@@ -55,7 +49,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
     });
     </script>
     <script th:inline="javascript">
-     
+           $(document).ready(function () {
         if ([[${msg}]] === 3){
         swal({
 
