--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_capacitaciones.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3efb06ae-db0d-441a-8882-24e35fcd8a5a">
 	<property name="ireport.zoom" value="0.909090909090913"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="10"/>
+	<property name="ireport.y" value="48"/>
 	<parameter name="IMAGE_PATH" class="java.lang.String" isForPrompting="false">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -165,7 +165,7 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="26" splitType="Stretch">
+		<band height="33" splitType="Stretch">
 			<rectangle>
 				<reportElement x="4" y="2" width="794" height="24" uuid="2e141a51-ff3c-4e16-b5e4-9d4b9b8dd33c"/>
 			</rectangle>
@@ -184,14 +184,14 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="254" y="0" width="100" height="20" uuid="7718e582-8633-4afa-818b-ca60e522e406"/>
+				<reportElement x="254" y="0" width="52" height="20" uuid="7718e582-8633-4afa-818b-ca60e522e406"/>
 				<textElement textAlignment="Center">
 					<font size="10" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Horas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="370" y="0" width="100" height="20" uuid="582ff30d-c86e-43e1-bea2-574d48a1fcfe"/>
+				<reportElement x="323" y="0" width="147" height="26" uuid="582ff30d-c86e-43e1-bea2-574d48a1fcfe"/>
 				<textElement textAlignment="Center">
 					<font size="10" isBold="true"/>
 				</textElement>
@@ -225,7 +225,7 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 				<reportElement x="243" y="2" width="1" height="24" uuid="f8b57054-6274-42c6-b111-e0d47bfdb1f3"/>
 			</line>
 			<line>
-				<reportElement x="369" y="2" width="1" height="24" uuid="ed04f08f-5313-46ca-9b9a-3257dbe33088"/>
+				<reportElement x="318" y="2" width="1" height="24" uuid="ed04f08f-5313-46ca-9b9a-3257dbe33088"/>
 			</line>
 			<line>
 				<reportElement x="479" y="2" width="1" height="24" uuid="e09470c3-5544-401a-8a37-6fcf056b9c2a"/>
@@ -239,7 +239,7 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="25" splitType="Stretch">
+		<band height="28" splitType="Stretch">
 			<textField>
 				<reportElement x="12" y="0" width="100" height="20" uuid="1748ebf9-0a45-4a7c-b32a-c7d5e14c7d0f"/>
 				<textElement textAlignment="Center">
@@ -253,12 +253,12 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="254" y="0" width="100" height="25" uuid="08c4f942-8efb-4034-9574-815d33d0cc9a"/>
+				<reportElement x="254" y="0" width="52" height="25" uuid="08c4f942-8efb-4034-9574-815d33d0cc9a"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{duracionhoracapacitacion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="370" y="0" width="100" height="20" uuid="415de10f-638b-4733-a1ed-4b4f04cf8454"/>
+				<reportElement x="323" y="0" width="147" height="20" uuid="415de10f-638b-4733-a1ed-4b4f04cf8454"/>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{nombrecapacitacion}]]></textFieldExpression>
 			</textField>
@@ -281,16 +281,24 @@ and ca.fechacapacitacionhasta<=$P{FECHAFIN}]]>
 	</detail>
 	<columnFooter>
 		<band height="50" splitType="Stretch">
-			<textField evaluationTime="Report">
-				<reportElement x="683" y="0" width="100" height="20" uuid="71862321-0afd-4c0d-b156-dfd0df409d2a"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
 			<textField isStretchWithOverflow="true" pattern="###0">
-				<reportElement mode="Opaque" x="10" y="0" width="651" height="13" backcolor="#FFFFFF" uuid="8a740730-2662-4df9-afd0-711983618f27"/>
+				<reportElement mode="Opaque" x="10" y="8" width="651" height="13" backcolor="#FFFFFF" uuid="8a740730-2662-4df9-afd0-711983618f27"/>
 				<textElement>
 					<font fontName="Times New Roman" isBold="true" isUnderline="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Total de Registros:    " + $V{COLUMN_COUNT}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="8" y="3" width="775" height="1" uuid="afe1f8be-3e3b-48a0-a8e2-4c82777bff8a"/>
+			</line>
+			<textField>
+				<reportElement x="643" y="9" width="80" height="20" uuid="5edb805e-1d02-4b14-9ff1-78764fe8b83e"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="723" y="9" width="40" height="20" uuid="23fd6591-87d4-4090-a025-8193ab69e6fb"/>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
